# fraym_proto_2

./: .env.example  .gitignore  COMPONENTS_REFERENCE.md  DEPLOYMENT.md  README.md  auth.py  check_deployment.py  config.py  deploy.py  deploy_ngrok.py  deployment_checklist.json  deployment_info.json  main.py  models.py  openai_service.py  prompt.txt  pyproject.toml  schema.prisma  test.html
.github/workflows/: deploy-frontend.yml
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  types.ts
frontend/src/components/: Button.tsx  Card.tsx  Cart.tsx  CartIcon.tsx  ChatApp.tsx  Container.tsx  Flex.tsx  Footer.tsx  Grid.tsx  Header.tsx  Heading.tsx  Hero.tsx  Image.tsx  Input.tsx  Navigation.tsx  ProductCard.tsx  ProductDetail.tsx  Sidebar.tsx  SplashScreen.tsx  Text.tsx  Welcome.tsx  WelcomeAnimation.tsx  ZaraCategoryButtons.tsx  ZaraContainer.tsx  ZaraHeader.tsx  ZaraMessageInput.tsx  ZaraProductCard.tsx  ZaraProductGrid.tsx  ZaraWelcome.tsx
frontend/src/services/: api.ts  componentRenderer.tsx  storage.ts
